sjeng/use_undefined_identifier/c1/eval
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/eval/src/eval.c:1235:6: error: use of undeclared identifier 'dword_66359C'
if ( dword_66359C[wking_loc] ) 
     ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/eval/src/eval.c:1275:6: error: use of undeclared identifier 'dword_66359C'
if ( dword_66359C[bking_loc] ) 
     ^
2 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/eval/src/obj/eval.o] Error 1
